--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-router-dom": "^5.1.6",
     "antd": "^4.8.2",
     "craco-less": "^1.17.0",
+    "i18next": "^19.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.7.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.5",
