--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "antd": "^4.8.2",
     "craco-less": "^1.17.0",
     "i18next": "^19.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.7.3",
+    "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-syntax-highlighter": "^15.3.1",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
